@@ -1,3 +1,14 @@
+2008-09-25  Don Porter  <dgp@users.sourceforge.net>
+
+	TIP #323 IMPLEMENTATION (partial)
+
+	* doc/global.n:		Revise [global] to accept zero variable names.
+	* generic/tclVar.c:
+	* tests/proc-old.test:
+	* tests/var.test:
+
+	* doc/global.n: Correct false claim about [info locals].
+
 2008-09-25  Donal K. Fellows  <dkf@users.sf.net>
 
 	TIP #315 IMPLEMENTATION
